# accountbook

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  credentials.py  gbq.py  gsheets.py  main.py  pyproject.toml
data/accounts/: test_owner-test_bank-test_vault.json
query/: test.py
records/: fisher-bank-card.json  fisher-bank-card2.json  fisher-bank-card3.json
schema/: fisher_2023.json  kuan-wu.json
src/: config.py  main.py
src/accountbook/: abc.py  account.py  account_properties.py  balance_optimization.py  budget.py  credentials.py  field.py  gbq.py  gsheets.py  helper.py  optimization.py  table_properties.py
src/constant/: component.py  members.py  table.py
tutorials/: sheets_create.py
